[workspace]
members = [
  "noop-str", "noop-string", # to compare size
  "difference-lcs", # abandoned, buggy
  "dissimilar-myers", # large binary size?
  "diffs-myers-byte", # low-level, compare bytes
  "diffs-myers-token", # compare token-vectors
  "diffs-patience-token", # compare token-vectors
]

# no artifacts (bins, libs) -> virtual manifest
# -> specify dependencies in workspace members
